RESOLVED FIXED109151
Fix FIXME in WindowFeatures.h
https://bugs.webkit.org/show_bug.cgi?id=109151
Summary Fix FIXME in WindowFeatures.h
Kentaro Hara
Reported 2013-02-07 01:01:19 PST
1. // FIXME: We can delete this constructor once V8 showModalDialog is changed to use DOMWindow. This FIXME is not right. The WindowFeatures() constructor is used by other ports too (e.g. WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp). So we should remove the FIXME. 2. // FIXME: We can make these functions private non-member functions once V8 showModalDialog is changed to use DOMWindow. This FIXME is fixable. Given that V8 now uses DOMWindow in showModalDialog(), we can make the methods private.
Attachments
Patch (4.86 KB, patch)
2013-02-07 01:02 PST, Kentaro Hara
no flags
Patch (4.84 KB, patch)
2013-02-07 01:03 PST, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2013-02-07 01:02:52 PST
Kentaro Hara
Comment 2 2013-02-07 01:03:44 PST
Build Bot
Comment 3 2013-02-07 05:43:19 PST
WebKit Review Bot
Comment 4 2013-02-07 16:32:09 PST
Comment on attachment 187014 [details] Patch Clearing flags on attachment: 187014 Committed r142202: <http://trac.webkit.org/changeset/142202>
WebKit Review Bot
Comment 5 2013-02-07 16:32:13 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2013-02-07 20:15:02 PST
Comment on attachment 187014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=187014&action=review > Source/WebCore/page/WindowFeatures.h:40 > + WindowFeatures() Any chance we can wean the callers off this entirely? I don’t understand why this is useful.
Note You need to log in before you can comment on or make changes to this bug.