Fix FIXMEs in WindowFeatures.h https://bugs.webkit.org/show_bug.cgi?id=109151

Reviewed by Adam Barth.

1. // FIXME: We can delete this constructor once V8 showModalDialog is
   // changed to use DOMWindow.

This FIXME is not right. The WindowFeatures() constructor is used by
other ports too (e.g. WebKit2/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp).
So we should remove the FIXME.

2. // FIXME: We can make these functions private non-member functions
   // once V8 showModalDialog is changed to use DOMWindow.

Given that V8 now uses DOMWindow in showModalDialog(), we can make the
methods private.

No tests. No change in behavior.

* page/WindowFeatures.h:
(WebCore):
(WebCore::WindowFeatures::WindowFeatures):
(WindowFeatures):


Canonical link: https://commits.webkit.org/127446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142202 268f45cc-cd09-0410-ab3c-d52691b4dbfc